fix(item): Fix badge moving to new line when text is too long, closes #551

--- a/scss/_items.scss
+++ b/scss/_items.scss
@@ -51,7 +51,10 @@
 
   // Align badges within items
   .badge {
-    float: right;
+    @include display-flex();
+    position: absolute;
+    top: $item-padding;
+    right: ($item-padding * 2) + 5;
   }
   .badge + .badge {
     margin-right: 5px;
